--- a/styles/styles.css
+++ b/styles/styles.css
@@ -117,7 +117,7 @@ body, html {
     display: inline-block;
 }
 
-.-event .c-calendar_text:after {
+/*.-event .c-calendar_text:after {
     content: "";
     display: block;
     width: 4px;
@@ -128,7 +128,7 @@ body, html {
     right: 6px;
     display: block;
     background-color: #000000;
-}
+}*/
 
 .c-calendar_link {
     text-decoration: none;
@@ -237,4 +237,38 @@ body, html {
 h1, h2, h3, h4 {
   margin: 0;
   margin-top: 10px;
+}
+
+.-today {
+  color: blue;
+  font-weight: bold;
+}
+
+.-start {
+  background: green;
+}
+
+.-end {
+  background: red;
+}
+
+.-empty {
+  background: gray;
+}
+
+.-selected {
+  background: #eee;
+}
+
+.-num {
+  position: absolute;
+  top: 1;
+  right: 1;
+  font-size: 9px;
+  background-color: red;
+  border-radius: 100%;
+  border: 2px red;
+  color: white;
+  line-height: 9px;
+  padding: 2px 4px;
 }
