--- a/src/styles/demo/_grid.scss
+++ b/src/styles/demo/_grid.scss
@@ -26,19 +26,18 @@
   float: left;
   padding-left: 10px;
   padding-right: 10px;
-  border-left: 1px dotted black;
 }
 
-.half:first-child, 
-.quarter:first-child, 
-.whole:first-child, 
+.half:first-child,
+.quarter:first-child,
+.whole:first-child,
 .three-fourth:first-child {
   padding-left: 0;
 }
 
-.half:last-child, 
-.quarter:last-child, 
-.whole:last-child, 
+.half:last-child,
+.quarter:last-child,
+.whole:last-child,
 .three-fourth:last-child {
   padding-right: 0;
 }
@@ -81,13 +80,6 @@
   clear: both;
 }
 
-.code {
-  background: #ddd;
-  border-radius: 10px;
-  padding: 10px;
-  overflow: auto;
-}
-
 section {
   clear: both;
   width: 100%;
@@ -118,4 +110,13 @@ hr {
 h1, h2, h3, h4 {
   margin: 0;
   margin-top: 10px;
+}
+
+
+.code {
+    background: #ddd;
+    border-radius: 10px;
+    padding: 10px;
+    overflow: auto;
+    background: #fdfdff;
 }
