--- a/src/styles/demo/_normalize.scss
+++ b/src/styles/demo/_normalize.scss
@@ -6,9 +6,10 @@
  */
 
 html {
-  font-family: sans-serif; /* 1 */
-  -ms-text-size-adjust: 100%; /* 2 */
-  -webkit-text-size-adjust: 100%; /* 2 */
+    font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Noto Sans,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji; /* 1 */
+    -ms-text-size-adjust: 100%; /* 2 */
+    -webkit-text-size-adjust: 100%; /* 2 */
+    background: #f6f6fe;
 }
 
 /**
@@ -16,7 +17,7 @@ html {
  */
 
 body {
-  margin: 0;
+    margin: 0;
 }
 
 /* HTML5 display definitions
@@ -40,7 +41,7 @@ menu,
 nav,
 section,
 summary { /* 1 */
-  display: block;
+    display: block;
 }
 
 /**
@@ -51,7 +52,7 @@ audio,
 canvas,
 progress,
 video {
-  display: inline-block;
+    display: inline-block;
 }
 
 /**
@@ -59,8 +60,8 @@ video {
  */
 
 audio:not([controls]) {
-  display: none;
-  height: 0;
+    display: none;
+    height: 0;
 }
 
 /**
@@ -68,7 +69,7 @@ audio:not([controls]) {
  */
 
 progress {
-  vertical-align: baseline;
+    vertical-align: baseline;
 }
 
 /**
@@ -78,7 +79,7 @@ progress {
 
 template, /* 1 */
 [hidden] {
-  display: none;
+    display: none;
 }
 
 /* Links
@@ -89,7 +90,7 @@ template, /* 1 */
  */
 
 a {
-  background-color: transparent;
+    background-color: transparent;
 }
 
 /**
@@ -99,7 +100,7 @@ a {
 
 a:active,
 a:hover {
-  outline-width: 0;
+    outline-width: 0;
 }
 
 /* Text-level semantics
@@ -111,9 +112,9 @@ a:hover {
  */
 
 abbr[title] {
-  border-bottom: none; /* 1 */
-  text-decoration: underline; /* 2 */
-  text-decoration: underline dotted; /* 2 */
+    border-bottom: none; /* 1 */
+    text-decoration: underline; /* 2 */
+    text-decoration: underline dotted; /* 2 */
 }
 
 /**
@@ -122,7 +123,7 @@ abbr[title] {
 
 b,
 strong {
-  font-weight: inherit;
+    font-weight: inherit;
 }
 
 /**
@@ -131,7 +132,7 @@ strong {
 
 b,
 strong {
-  font-weight: bolder;
+    font-weight: bolder;
 }
 
 /**
@@ -139,7 +140,7 @@ strong {
  */
 
 dfn {
-  font-style: italic;
+    font-style: italic;
 }
 
 /**
@@ -148,8 +149,8 @@ dfn {
  */
 
 h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
+    font-size: 2em;
+    margin: 0.67em 0;
 }
 
 /**
@@ -157,8 +158,8 @@ h1 {
  */
 
 mark {
-  background-color: #ff0;
-  color: #000;
+    background-color: #ff0;
+    color: #000;
 }
 
 /**
@@ -166,7 +167,7 @@ mark {
  */
 
 small {
-  font-size: 80%;
+    font-size: 80%;
 }
 
 /**
@@ -176,18 +177,18 @@ small {
 
 sub,
 sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
+    font-size: 75%;
+    line-height: 0;
+    position: relative;
+    vertical-align: baseline;
 }
 
 sub {
-  bottom: -0.25em;
+    bottom: -0.25em;
 }
 
 sup {
-  top: -0.5em;
+    top: -0.5em;
 }
 
 /* Embedded content
@@ -198,7 +199,7 @@ sup {
  */
 
 img {
-  border-style: none;
+    border-style: none;
 }
 
 /**
@@ -206,7 +207,7 @@ img {
  */
 
 svg:not(:root) {
-  overflow: hidden;
+    overflow: hidden;
 }
 
 /* Grouping content
@@ -221,8 +222,8 @@ code,
 kbd,
 pre,
 samp {
-  font-family: monospace, monospace; /* 1 */
-  font-size: 1em; /* 2 */
+    font-family: monospace, monospace; /* 1 */
+    font-size: 1em; /* 2 */
 }
 
 /**
@@ -230,7 +231,7 @@ samp {
  */
 
 figure {
-  margin: 1em 40px;
+    margin: 1em 40px;
 }
 
 /**
@@ -239,9 +240,9 @@ figure {
  */
 
 hr {
-  box-sizing: content-box; /* 1 */
-  height: 0; /* 1 */
-  overflow: visible; /* 2 */
+    box-sizing: content-box; /* 1 */
+    height: 0; /* 1 */
+    overflow: visible; /* 2 */
 }
 
 /* Forms
@@ -255,7 +256,7 @@ button,
 input,
 select,
 textarea {
-  font: inherit;
+    font: inherit;
 }
 
 /**
@@ -263,7 +264,7 @@ textarea {
  */
 
 optgroup {
-  font-weight: bold;
+    font-weight: bold;
 }
 
 /**
@@ -275,7 +276,7 @@ optgroup {
 button,
 input, /* 1 */
 select { /* 2 */
-  overflow: visible;
+    overflow: visible;
 }
 
 /**
@@ -287,7 +288,7 @@ button,
 input,
 select,
 textarea { /* 1 */
-  margin: 0;
+    margin: 0;
 }
 
 /**
@@ -297,7 +298,7 @@ textarea { /* 1 */
 
 button,
 select { /* 1 */
-  text-transform: none;
+    text-transform: none;
 }
 
 /**
@@ -308,7 +309,7 @@ button,
 [type="button"],
 [type="reset"],
 [type="submit"] {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 /**
@@ -316,7 +317,7 @@ button,
  */
 
 [disabled] {
-  cursor: default;
+    cursor: default;
 }
 
 /**
@@ -329,7 +330,7 @@ button,
 html [type="button"], /* 1 */
 [type="reset"],
 [type="submit"] {
-  -webkit-appearance: button; /* 2 */
+    -webkit-appearance: button; /* 2 */
 }
 
 /**
@@ -338,8 +339,8 @@ html [type="button"], /* 1 */
 
 button::-moz-focus-inner,
 input::-moz-focus-inner {
-  border: 0;
-  padding: 0;
+    border: 0;
+    padding: 0;
 }
 
 /**
@@ -348,7 +349,7 @@ input::-moz-focus-inner {
 
 button:-moz-focusring,
 input:-moz-focusring {
-  outline: 1px dotted ButtonText;
+    outline: 1px dotted ButtonText;
 }
 
 /**
@@ -356,9 +357,9 @@ input:-moz-focusring {
  */
 
 fieldset {
-  border: 1px solid #c0c0c0;
-  margin: 0 2px;
-  padding: 0.35em 0.625em 0.75em;
+    border: 1px solid #c0c0c0;
+    margin: 0 2px;
+    padding: 0.35em 0.625em 0.75em;
 }
 
 /**
@@ -369,12 +370,12 @@ fieldset {
  */
 
 legend {
-  box-sizing: border-box; /* 1 */
-  color: inherit; /* 2 */
-  display: table; /* 1 */
-  max-width: 100%; /* 1 */
-  padding: 0; /* 3 */
-  white-space: normal; /* 1 */
+    box-sizing: border-box; /* 1 */
+    color: inherit; /* 2 */
+    display: table; /* 1 */
+    max-width: 100%; /* 1 */
+    padding: 0; /* 3 */
+    white-space: normal; /* 1 */
 }
 
 /**
@@ -382,7 +383,7 @@ legend {
  */
 
 textarea {
-  overflow: auto;
+    overflow: auto;
 }
 
 /**
@@ -392,8 +393,8 @@ textarea {
 
 [type="checkbox"],
 [type="radio"] {
-  box-sizing: border-box; /* 1 */
-  padding: 0; /* 2 */
+    box-sizing: border-box; /* 1 */
+    padding: 0; /* 2 */
 }
 
 /**
@@ -402,7 +403,7 @@ textarea {
 
 [type="number"]::-webkit-inner-spin-button,
 [type="number"]::-webkit-outer-spin-button {
-  height: auto;
+    height: auto;
 }
 
 /**
@@ -410,7 +411,7 @@ textarea {
  */
 
 [type="search"] {
-  -webkit-appearance: textfield;
+    -webkit-appearance: textfield;
 }
 
 /**
@@ -420,5 +421,5 @@ textarea {
 
 [type="search"]::-webkit-search-cancel-button,
 [type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
+    -webkit-appearance: none;
 }
