--- a/src/styles/themes/_base.scss
+++ b/src/styles/themes/_base.scss
@@ -1,96 +1,97 @@
 tbody, thead {
-  display: block;
+    display: block;
 }
 
 .c-calendar {
-  position: relative;
-  font-family: sans-serif;
-  text-align: center;
+    position: relative;
+    font-family: sans-serif;
+    text-align: center;
+    background:white;
+    border-radius: 2px;
+    padding:20px;
 }
 
 .c-calendar a {
-  text-decoration: none;
-  color: black;
+    text-decoration: none;
+    color: black;
 }
 
 .c-calendar_table {
-  width: 100%;
+    width: 100%;
 }
 
 .c-calendar_title {
-  margin: 0;
-  padding-bottom: 20px;
-  font-size: 20px;
+    margin: 0;
+    padding-bottom: 20px;
+    font-size: 20px;
 }
 
 .c-calendar_header {
-  display: inline-block;
-  width: 100%;
+    display: inline-block;
+    width: 100%;
+    background: #dddfff;
+    padding:5px 0px;
 }
 
 .c-calendar_header .c-calendar_day {
-  padding: 0px;
-  width: calc( ( 100% / 7 ) - 1px);
+    padding: 0px;
+    width: calc((100% / 7) - 1px);
 }
 
 .c-calendar_row {
-  border: 1px solid transparent;
-  border-bottom: none;
-  display: inline-block;
-  width: 100%;
+    border-bottom: none;
+    display: inline-block;
+    width: 100%;
 
-  &:last-child {
-    border-bottom: 1px solid transparent;
-  }
+    &:last-child {
+        border-bottom: 1px solid transparent;
+    }
 
 }
 
 .c-calendar_day {
-  position: relative;
-  border-left: 1px solid transparent;
-  border-right: none;
-  // border-bottom: 1px solid gray;
-  width: calc( ( 100% / 7 ) - 3px);
-  padding-bottom: 4%;
-  padding-top: 4%;
-  display: inline-block;
+    position: relative;
+    border-left: 1px solid transparent;
+    border-right: none;
+    width: calc((100% / 7) - 3px);
+    display: inline-block;
 
-  &:first-child {
-    border-left: none;
-  }
+    &:first-child {
+        border-left: none;
+    }
 }
 
 .c-calendar_link {
-  text-decoration: none;
+    text-decoration: none;
+    border: none;
+    background: none;
 }
 
 .c-calendar_prev {
-  position: absolute;
-  left: 0;
-  top: 0px;
+    left: 0;
 }
 
 .c-calendar_next {
-  position: absolute;
-  right: 0px;
-  top: 0px;
+    right: 0px;
 }
 
 .c-calendar_next,
 .c-calendar_prev {
-  background: none;
-  border: 1px solid #ddd;
-  display: block;
-  cursor: pointer;
+    position: absolute;
+    background: none;
+    border: 1px solid #ddd;
+    display: block;
+    cursor: pointer;
+    top: 25px;
 }
 
 .c-calendar_month {
-  font-family: sans-serif;
-  font-size: 24px;
-  width: 25%;
-  position: relative;
-  padding: 2% 0px;
-  display: inline-block;
-  font-size: 18px;
-  line-height: 45px;
+    font-family: sans-serif;
+    font-size: 24px;
+    width: 25%;
+    position: relative;
+    padding: 2% 0px;
+    display: inline-block;
+    font-size: 18px;
+    line-height: 45px;
 }
