--- a/src/styles/themes/_light.scss
+++ b/src/styles/themes/_light.scss
@@ -1,84 +1,86 @@
 /*
- * ! bCalendar - 2017-04-09 
+ * ! bCalendar - 2017-04-09
  */
 @charset "UTF-8";
 .c-calendar a {
-  color: black;
+    color: black;
 }
 
 .c-calendar_table {
-  width: 100%;
+    width: 100%;
 }
 
 .c-calendar_title {
-  font-weight: bold;
+    font-weight: bold;
 }
 
 .c-calendar_row {
-  border: 1px solid black;
-  border-bottom: none;
-
-  &:last-child {
-    border-bottom: 1px solid black;
-  }
+    border-bottom: none;
 
 }
 
 .c-calendar_day {
-  border-left: 1px solid gray;
-  border-right: none;
-
-  &:first-child {
-    border-left: none;
-  }
 }
 
+.c-calendar_link {
+    width: 2vw;
+    background: #f7f7ff;
+    border-radius: 50%;
+    height: 2vw;
 
-.c-calendar_prev {
-  position: absolute;
-  left: 0;
-  top: 0px;
+    .c-calendar_month & {
+        width: 100%;
+        height: 100%;
+    }
+
+    .-empty & {
+        color: #aaa;
+    }
+
+    .-today & {
+        background: #dddfff;
+    }
+}
+
+.-empty {
+    color: #aaa;
 }
 
 .c-calendar_prev:before {
-  content: "← ";
+    content: "← ";
 }
 
 .c-calendar_next:after {
-  content: " →";
+    content: " →";
 }
 
-.c-calendar_next {
-  position: absolute;
-  right: 0px;
-  top: 0px;
-}
-
-.c-calendar_next, 
+.c-calendar_next,
 .c-calendar_prev {
-  border: 1px solid #ddd;
+    border: none;
 }
 
 .-today {
-  font-weight: bold;
-}
-.-empty {
-  background: #dedede;
+    font-weight: bold;
 }
 
 .-selected {
-  background: #eee;
+    background: #eee;
 }
 
 .c-calendar_num {
-  position: absolute;
-  top: 1;
-  right: 1;
-  font-size: 9px;
-  background-color: red;
-  border-radius: 100%;
-  border: 2px red;
-  color: white;
-  line-height: 9px;
-  padding: 2px 4px;
+    position: absolute;
+    top: 1;
+    right: 1;
+    font-size: 9px;
+    background-color: red;
+    border-radius: 100%;
+    border: 2px red;
+    color: white;
+    line-height: 9px;
+    padding: 2px 4px;
+}
+
+.c-calendar_month_label {
+    border: none;
+    background: none;
 }
